src/styles/global.css
@font-face {
  font-family: 'Inconsolata';
  src: url('../fonts/Inconsolata.woff2') format('woff2'),
    url('../fonts/Inconsolata.woff') format('woff');
  font-display: swap;
}

@font-face {
  font-family: 'Share';
  src: url('../fonts/Share.woff2') format('woff2'),
    url('../fonts/Share.woff') format('woff');
  font-display: swap;
}

::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #808080;
  border-radius: 10px;
}

html {
  box-sizing: border-box;
}

body {
  --backgroundColor: #ffffff;
  --fontColor: #000000;
  --headerColor: #000000;
  --linkColor: #0000bf;
  --codeColor: #A80079;
  --activeLink: #000000;
  --inactiveLink: #999999;
  --codeblockTitle: #e6d9bb;
  --important: #B40808;
  --filter: opacity(1), contrast(1);

  margin: 0;
  height: 100%;
  background: var(--backgroundColor);
  color: var(--fontColor);
  font-family: 'Inconsolata', sans-serif;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  filter: var(--filter);
  transition: background 0.5s ease-in-out;
}

body.dark {
  --backgroundColor: #222;
  --fontColor: #eee;
  --headerColor: white;
  --linkColor: #9999ff;
  --codeColor: #FF7EDB;
  --activeLink: white;
  --inactiveLink: #808080;
  --codeblockTitle: #fff1d0;
  --important: #F86868;
  --filter: opacity(0.8), contrast(1.2);
}

main {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  -webkit-box-pack: justify;
  justify-content: space-between;
  padding: 2rem 0 2rem 0;
  max-width: 768px;
  margin: auto;
}

/* Menu links */
.headerLink {
  text-decoration: none;
  color: var(--linkColor);
  transition: color 0.5s ease-in-out;
}

.headerLink:hover {
  text-decoration: none !important;
}

/* HTML Body */
a {
  text-decoration: underline;
  color: var(--linkColor);
}

a:hover {
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--headerColor);
  word-wrap: break-word;
  overflow-wrap: break-word;
  hyphens: auto;
}

h1 {
  font-size: 1.85rem;
}

h2 {
  font-size: 1.75rem;
}

h3 {
  font-size: 1.65rem;
}

h4 {
  font-size: 1.55rem;
}

h5 {
  font-size: 1.45rem;
}

h6 {
  font-size: 1.35rem;
}

figcaption {
  font-size: 0.85rem;
  font-style: italic;
  text-align: center;
}

figcaption::before {
  content: 'figure: ';
}

.inlineMath {
  font-size: 1rem;
}

/* Markdown code */
.grvsc-container {
  padding: 1rem;
  border-radius: 0 0 0.5rem 0.5rem !important;
}

.grvsc-source {
  font-size: 0.85rem;
  line-height: 1.5;
  padding: 0 !important;
  font-family: 'Share', sans-serif;
}

.gatsby-code-title {
  background: var(--codeblockTitle);
  color: #121212;
  padding: 0.75rem 1rem 0.75rem 1rem;
  font-size: 0.85rem;
  border-radius: 0.5rem 0.5rem 0 0;
  font-family: 'Share', sans-serif;
}

/* Markdown elements */
.md-headers {
  margin-top: 2rem;
  margin-bottom: 0.25rem;
  color: var(--headerColor) !important;
}

blockquote {
  background: inherit;
  border-left: 0.5rem solid #696969;
  margin: 1.5em 0;
  padding: 0.5em 10px;
  font-style: italic;
}

th {
  font-weight: 700 !important;
}

th,
td {
  font-size: 1rem;
  padding: 0.5rem !important;
  border: 2px solid var(--fontColor);
}

.gatsby-resp-image-figure {
  padding: 0;
  margin-top: 0;
  margin-bottom: 1rem;
}

@media (max-width: 768px) {
  main {
    padding: 0.5rem;
  }
  table {
    overflow-x: auto;
  }
}

@media (min-width: 1080px) {
  h1 {
    font-size: 2.2rem;
  }

  h2 {
    font-size: 2.1rem;
  }

  h3 {
    font-size: 2rem;
  }

  h4 {
    font-size: 1.9rem;
  }

  h5 {
    font-size: 1.8rem;
  }

  h6 {
    font-size: 1.7rem;
  }
}

